hphp/test/slow/compilation/cyclic-inheritance.php.expectf
Fatal error: unknown class A in %s/cyclic-inheritance.php on line 4
